--- a/Experiemnt3/templates/CHAT.html
+++ b/Experiemnt3/templates/CHAT.html
@@ -115,8 +115,7 @@ body {
 
               <div id="input-area" style="position:fixed;">
                 <center>
-                <input type="text" value="Ttype here" id="user-message" autocomplete="off">
-                <button type="button" id="SendMsg">Send</button>
+<input type="text" Placehoder="Type your message" value="HI" id="user-message" autocomplete="off">                <button type="button" id="SendMsg">Send</button>
               </center>
               </div>
 
