--- a/V2/Experiemnt3/templates/Video_Chat.html
+++ b/V2/Experiemnt3/templates/Video_Chat.html
@@ -10,12 +10,12 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!------ Include the above in your HEAD tag ---------->
-    
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900" rel="stylesheet">
 
     <!-- Bootstrap CSS File -->
     <link href="../static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  
+
     <!-- Libraries CSS Files -->
     <link href="../static/lib/nivo-slider/css/nivo-slider.css" rel="stylesheet">
     <link href="../static/lib/owlcarousel/owl.carousel.css" rel="stylesheet">
@@ -23,24 +23,24 @@
     <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="../static/lib/animate/animate.min.css" rel="stylesheet">
     <link href="../static/lib/venobox/venobox.css" rel="stylesheet">
-  
+
     <!-- Nivo Slider Theme -->
     <link href="../static/css/nivo-slider-theme.css" rel="stylesheet">
-  
+
     <!-- Main Stylesheet File -->
     <link href="../static/css/style.css" rel="stylesheet">
-  
+
     <!-- Responsive Stylesheet File -->
     <link href="../static/css/responsive.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
     <title>Document</title>
 </head>
-    
+
 <body>
     <style>
- 
-    
+
+
         #GTP {
           display: block;
           position: fixed;
@@ -75,19 +75,19 @@
           background-color: #555;
         }
         </style>
-    
-    
-    
-    
+
+
+
+
       <a href="{{url_for('index2')}}">  <button id="GTP" title="Sketch">L <br> e <br> a <br> v<br> e<br> </button></a>
-    
+
       <a class="navbar-brand" href="{{url_for('index2')}}">InterWeb</a>
         {% if current_user.is_authenticated %}
         <li>  <a   href="#" id="USERNAMES" style="background-color: rgb(255, 136, 1); position: absolute;
           top: 10px;
-          right: 100px;" >{{USERS}} </a>  </li>   
-       
-       
+          right: 100px;" >{{USERS}} </a>  </li>
+
+
 
         <a href="{{url_for('LOGOUT')}} "class=" ready-btn2 " style="position: absolute;
         top: 10px;
@@ -99,21 +99,27 @@
         <a href="{{url_for('LOGIN')}}" class="myButton  btn btn-info" style="position: absolute;
           top: 10px;
           right: 100px;"> Sign In </a> -->
-        {% endif %}    
-    
+        {% endif %}
+
         <a id="select-room">{{rooms}} </a>
 
         <div>
-            <canvas id="client_view"></canvas>
-            <div id="display-message-section" style="  overflow: auto;">
-                
+            <div id="display-Video-section" style="  overflow: auto;">
+              <video id="videoInput" class="hidden">Your browser does not support the video tag.</video>
+              <canvas id="canvasOutput"></canvas>
+
+              <canvas id="client_view"></canvas>
+
               </div>
-              
+            <div id="display-message-section" style="  overflow: auto;">
+
+              </div>
+
               <div id="input-area" style="position:fixed;">
                   <center>
-  
+
                   <!-- <button type="button" id="SendVideo">Camera</button> -->
-  
+
                   <input type="text" Placehoder="Type your message" value="HI" id="user-message" autocomplete="on" style="color:black;">
                   <button type="button" id="SendMsg" style="color:black;">Send</button>
                 </center>
@@ -123,11 +129,9 @@
 
 
 <div id="container" style="width:840px; height: 400px; display: none; ">
-  
+
   <div class="invisible">
-    <video id="videoInput" class="hidden">Your browser does not support the video tag.</video>
-    <canvas id="canvasOutput"></canvas>
-      
+
 
     </div>
 
@@ -147,7 +151,3 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.6.5/dat.gui.min.js"></script>
 </body>
 </html>
-
-
-
-
